--- a/Numpy/Indexing-and-Selection.ipynb
+++ b/Numpy/Indexing-and-Selection.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,9 +485,13 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "Python 3.8.3 64-bit ('base': conda)",
+   "display_name": "Python 3.8.3 64-bit ('base': conda)",
+   "metadata": {
+    "interpreter": {
+     "hash": "526a3a984cf5db5090a2ef306460d8162bf2fa3f6c8a802915e07d166f81552a"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -499,7 +503,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3-final"
   }
  },
  "nbformat": 4,
